CDR-1421 review revision - validate name constraint of archetype slot - isolate archetype slot validation to ValidationWalker - fix dvquantity_choice composition - cleanup